MP_frontend/dev_error.txt

> vite_react_shadcn_ts@0.0.0 dev
> vite


  [32m[1mVITE[22m v5.4.21[39m  [2mready in [0m[1m3227[22m[2m[0m ms[22m

  [32mΓ₧£[39m  [1mLocal[22m:   [36mhttp://localhost:[1m8080[22m/[39m
  [32mΓ₧£[39m  [1mNetwork[22m: [36mhttp://172.16.17.53:[1m8080[22m/[39m
[2m[32m  Γ₧£[39m[22m[2m  press [22m[1mh + enter[22m[2m to show help[22m
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/NET/Desktop/ATS-main/MP_frontend): [Error] Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
Require stack:
- C:\Users\NET\Desktop\ATS-main\MP_frontend\postcss.config.js

(@C:\Users\NET\Desktop\ATS-main\MP_frontend\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module '@tailwindcss/postcss'
Require stack:
- C:\Users\NET\Desktop\ATS-main\MP_frontend\postcss.config.js

(@C:\Users\NET\Desktop\ATS-main\MP_frontend\postcss.config.js)
    at load (file:///C:/Users/NET/Desktop/ATS-main/MP_frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///C:/Users/NET/Desktop/ATS-main/MP_frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///C:/Users/NET/Desktop/ATS-main/MP_frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///C:/Users/NET/Desktop/ATS-main/MP_frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///C:/Users/NET/Desktop/ATS-main/MP_frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v22.14.0
